# Robo-storage

./: .gitignore  DOCKER.md  Dockerfile  GITHUB_SETUP.md  README.md  docker-compose.yml  ros2.repos
firmware/esp32_robot/: README.md  esp32_robot.ino
src/robo_bringup/: CMakeLists.txt  package.xml
src/robo_bringup/launch/: robot.launch.py  simulation.launch.py
src/robo_core/: CMakeLists.txt  package.xml
src/robo_description/: CMakeLists.txt  package.xml
src/robo_description/urdf/: gazebo.xacro  inertial_macros.xacro  materials.xacro  robot.urdf.xacro
src/robo_hardware/: CMakeLists.txt  package.xml  robo_hardware_interface_plugin.xml
src/robo_hardware/config/: diff_drive_controller.yaml
src/robo_hardware/include/robo_hardware/: robo_hardware_interface.hpp
src/robo_hardware/src/: robo_hardware_interface.cpp
src/robo_navigation/: CMakeLists.txt  package.xml
src/robo_navigation/config/: nav2_params.yaml
src/robo_sensors/: CMakeLists.txt  package.xml
src/robo_sensors/config/: lds.yaml  rplidar.yaml
src/robo_sensors/launch/: lds.launch.py  rplidar.launch.py
src/robo_simulation/: CMakeLists.txt  package.xml
src/robo_simulation/worlds/: warehouse.world
src/robo_slam/: CMakeLists.txt  package.xml
src/robo_slam/config/: mapper_params_online_async.yaml
