<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robo_bringup</name>
  <version>0.1.0</version>
  <description>Launch-файлы для запуска робо-тележки</description>
  <maintainer email="your-email@example.com">Robo-Storage Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>robo_description</exec_depend>
  <exec_depend>robo_hardware</exec_depend>
  <exec_depend>robo_sensors</exec_depend>
  <exec_depend>robo_slam</exec_depend>
  <exec_depend>robo_navigation</exec_depend>
  <exec_depend>robo_simulation</exec_depend>
  
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
