<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robo_core</name>
  <version>0.1.0</version>
  <description>Метапакет для системы автономного склада Robo-Storage</description>
  <maintainer email="your-email@example.com">Robo-Storage Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Зависимости от собственных пакетов -->
  <exec_depend>robo_hardware</exec_depend>
  <exec_depend>robo_sensors</exec_depend>
  <exec_depend>robo_description</exec_depend>
  <exec_depend>robo_slam</exec_depend>
  <exec_depend>robo_navigation</exec_depend>
  <exec_depend>robo_simulation</exec_depend>
  <exec_depend>robo_bringup</exec_depend>

  <!-- Зависимости от внешних пакетов ROS2 -->
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
